new api from idea